--- a/sass/main.scss
+++ b/sass/main.scss
@@ -127,7 +127,7 @@ h1.company-name {
 		background-color: $white;
 		z-index: 10;
 		transform: translateX(-102%);
-		transition: transform .3s;
+		transition: transform 0.3s;
 
 		&--active {
 			transform: translateX(0);
@@ -148,9 +148,84 @@ h1.company-name {
 		text-decoration: none;
 		text-transform: uppercase;
 		transition: color 0.3s;
-		 
+
 		&:hover {
 			color: $gold;
+		}
+	}
+}
+
+//MAIN
+
+//CARDS
+.cards {
+	background-color: $darker;
+	overflow: hidden;
+
+	&__box {
+		display: grid;
+		grid-template-columns: repeat(9, 1fr);
+		grid-template-rows: repeat(3, 1fr);
+		gap: 2em;
+		padding: 6em 2em;
+	}
+
+	&__card {
+		position: relative;
+		display: grid;
+		justify-content: center;
+		padding: 3em;
+		text-align: center;
+		border: 1px solid transparent;
+		border-radius: 8px;
+		background-color: $dark;
+		transition: background-color 0.4s, border 0.3s;
+		z-index: 5;
+
+		&:hover {
+			background-color: $darker;
+			border: 1px solid $gold;
+			z-index: 1;
+		}
+
+		&::before {
+			position: absolute;
+			content: "";
+			width: 100%;
+			height: 100%;
+			border: 1px solid $gold;
+			border-radius: 8px;
+			opacity: 0;
+		}
+
+		&:hover::before {
+			animation: pulse 1s;
+		}
+
+		img {
+			margin-bottom: 1em;
+			width: 60px;
+			justify-self: center;
+		}
+
+		h3 {
+			margin-bottom: 1.6em;
+			text-transform: uppercase;
+		}
+
+		&--one {
+			grid-row: 1/2;
+			grid-column: 1/-1;
+		}
+
+		&--two {
+			grid-row: 2/3;
+			grid-column: 1/-1;
+		}
+
+		&--three {
+			grid-row: 3/4;
+			grid-column: 1/-1;
 		}
 	}
 }
