--- a/css/main.css
+++ b/css/main.css
@@ -174,17 +174,16 @@ h1.company-name {
 }
 
 .nav-mobile {
-  position: absolute;
+  position: fixed;
   top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
   display: flex;
+  height: 100vh;
+  width: 100%;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   background-color: #fff;
-  z-index: 10;
+  z-index: 100;
   transform: translateX(-102%);
   transition: transform 0.3s;
 }
@@ -410,7 +409,8 @@ h1.company-name {
   width: 100%;
   min-width: 100%;
 }
-.contact__form-box input, .contact__form-box textarea {
+.contact__form-box input,
+.contact__form-box textarea {
   padding: 1em 2em;
   margin-bottom: 2em;
   width: 100%;
@@ -418,7 +418,8 @@ h1.company-name {
   background: none;
   border: 1px solid rgba(255, 255, 255, 0.1);
 }
-.contact__form-box input:focus, .contact__form-box textarea:focus {
+.contact__form-box input:focus,
+.contact__form-box textarea:focus {
   outline: none;
   border: 1px solid #d6c78e;
 }
