--- a/sass/main.scss
+++ b/sass/main.scss
@@ -138,17 +138,16 @@ h1.company-name {
 
 .nav {
 	&-mobile {
-		position: absolute;
+		position: fixed;
 		top: 0;
-		left: 0;
-		bottom: 0;
-		right: 0;
 		display: flex;
+		height: 100vh;
+		width: 100%;
 		justify-content: center;
 		align-items: center;
 		flex-direction: column;
 		background-color: $white;
-		z-index: 10;
+		z-index: 100;
 		transform: translateX(-102%);
 		transition: transform 0.3s;
 
@@ -403,11 +402,11 @@ h1.company-name {
 	}
 }
 
-//CONTACT 
+//CONTACT
 .contact {
 	padding: 6em 2em;
 
-	&__form{
+	&__form {
 		display: grid;
 		grid-template-columns: repeat(6, 1fr);
 	}
@@ -425,18 +424,19 @@ h1.company-name {
 			min-width: 100%;
 		}
 
-		input, textarea {
+		input,
+		textarea {
 			padding: 1em 2em;
 			margin-bottom: 2em;
 			width: 100%;
 			color: $white;
 			background: none;
-			border: 1px solid rgba(255, 255, 255, .1);
+			border: 1px solid rgba(255, 255, 255, 0.1);
 
 			&:focus {
 				outline: none;
 				border: 1px solid $gold;
-			}		
+			}
 		}
 		&:nth-child(1) {
 			grid-column: 1/-1;
@@ -452,28 +452,24 @@ h1.company-name {
 		}
 	}
 
-&__form-btn {
-	grid-column: 1/3;
-	grid-row: 4/5;
-	padding: 1em;
-	border: 1px solid $gold;
-	background: none;
-	color: $gold;
-	font-weight: bold;
-	cursor: pointer;
-	transition: color .3s, background-color .3s;
+	&__form-btn {
+		grid-column: 1/3;
+		grid-row: 4/5;
+		padding: 1em;
+		border: 1px solid $gold;
+		background: none;
+		color: $gold;
+		font-weight: bold;
+		cursor: pointer;
+		transition: color 0.3s, background-color 0.3s;
 
-	&:hover,
-	&:focus {
-		outline: none;
-		color: $dark;
-		background-color: $gold;
+		&:hover,
+		&:focus {
+			outline: none;
+			color: $dark;
+			background-color: $gold;
+		}
 	}
-}
-
-
-
-
 }
 
 .footer {
